# girolle

./: .gitignore  README.md  pyproject.toml  tests.py  tox.ini
src/girolle/: __main__.py  girolle.py
